--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,19 @@ margin-top: 50px;
   margin: 25px;
   
 }
+.opdracht{
+  max-width: 1000px;
+  border-radius: 5px;
+  
+  margin: 15px;
+  
+}
+.leraar{
+  max-width: 400px;
+  border-radius: 15px;
+  border: 3px solid #fb3333;
+  
+}
 .content h1{
   font-family: sans-serif;
   font-weight: bold;
@@ -54,6 +67,26 @@ margin-top: 50px;
   
   color: #01367c;
 }
+.foto1{
+  max-width: 400px;
+  border-radius: 5px;
+  border: 3px solid #fb3333;
+  
+
+}
+.foto2{
+  max-width: 400px;
+  border-radius: 15px;
+  border: 3px solid #fb3333;
+  
+}
+
+  .footer a{
+    color: #fb3333;
+    text-decoration: none;
+  
+  
+  }
   .footer{
     background-color: #01367c ;
   }
@@ -62,4 +95,81 @@ margin-top: 50px;
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: center;
+  }
+
+  .contentwrapper1{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color:#01367c;
+    
+    
+  }
+  .content1{
+    display: flex;
+  justify-content: center;
+  align-items:  center;
+  flex-direction: column;
+
+  
+  margin-top: 50px;
+  }
+  .content1 h1{
+    color:
+    #fb3333;
+    margin: 10px;
+  }
+  .content1 h1{
+    font-family: sans-serif;
+    font-weight: bold;
+    display: block;
+  }
+  .content1 p{
+    font-size: x-large;
+    max-width: 500px;
+    margin: 50px;
+    
+    color: #fb3333;
+  }
+
+  .contentwrapper2{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+    
+    
+  }
+  .content2{
+    display: flex;
+  justify-content: center;
+  align-items:  center;
+  flex-direction: column;
+
+  
+  margin-top: 50px;
+  }
+  .content2 h1{
+    color:
+    #01367c;
+    margin: 10px;
+  }
+  .content2 h1{
+    font-family: sans-serif;
+    font-weight: bold;
+    display: block;
+  }
+  .content2 p{
+    font-size: x-large;
+    max-width: 500px;
+    margin: 50px;
+    
+    color: #01367c;
+  }
+
+  .vakantie{
+    border-radius: 5px;
+    margin-left: 25px;
   }
