--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,13 +20,18 @@
 .logo{
   max-width: 200px;
 }
-
+.curio{
+  position: absolute;
+  right: 0%;
+  
+  
+  
+}
 .content{
   display: flex;
 justify-content: center;
 align-items:  center;
 flex-direction: column;
-
 margin-top: 50px;
 }
 .content h1{
@@ -52,7 +57,7 @@ margin-top: 50px;
 }
 .leraar{
   max-width: 400px;
-  border-radius: 15px;
+  border-radius: 5px;
   border: 3px solid #fb3333;
   
 }
@@ -73,7 +78,7 @@ margin-top: 50px;
 }
 .foto2{
   max-width: 400px;
-  border-radius: 15px;
+  border-radius: 5px;
   border: 3px solid #fb3333;
   
 }
